Add About section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Tea Cozy</title>
 </head>
 <body>
-    
+    <header>
+        <div id="logo">
+            <a href="#about">
+                <img src="./assets/img-tea-cozy-logo.png" alt="">
+            </a>
+        </div>
+        <nav>
+            <span><a href="#about">Mission</a></span>
+            <span><a href="#highlights">Featured Tea</a></span>
+            <span><a href="#contact">Locations</a></span>
+        </nav>
+    </header>
+
+    <div class="main_content">
+        <div id="about">
+            <div>
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Oganic Tea</h4>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
