--- a/index.html
+++ b/index.html
@@ -21,12 +21,55 @@
         </nav>
     </header>
 
-    <div class="main_content">
+    <div>
         <div id="about">
             <div>
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Oganic Tea</h4>
             </div>
+        </div>
+
+        <div id="highlights">
+            <div>
+                <h2>Tea of the Month</h2>
+                <h4>What's Steeping at The Tea Cozy?</h4>
+                <div class="rows">
+                    <div>
+                        <div class="square">
+                            <img src="./assets/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
+                        </div>
+                        <p>Fall Berry Blitz Tea</p>
+                    </div>
+
+                    <div>
+                        <div class="square">
+                            <img src="./assets/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+                        </div>
+                        <p>Spiced Rum Tea</p>
+                    </div>
+
+                    <div>
+                        <div class="square">
+                            <img src="./assets/img-donut.jpg" alt="Seasonal Donuts">
+                        </div>
+                        <p>Seasonal Donuts</p>
+                    </div>
+
+                    <div>
+                        <div class="square">
+                            <img src="./assets/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+                        </div>
+                        <p>Myrtle Ave Tea</p>
+                    </div>
+                    
+                    <div>
+                        <div class="square">
+                            <img src="./assets/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+                        </div>
+                        <p>Bedford Bizarre Tea</p>
+                    </div>
+                </div>
+            </div>            
         </div>
     </div>
 </body>
