--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <span><a href="#about">Mission</a></span>
             <span><a href="#highlights">Featured Tea</a></span>
-            <span><a href="#contact">Locations</a></span>
+            <span><a href="#locations">Locations</a></span>
         </nav>
     </header>
 
@@ -28,7 +28,7 @@
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Oganic Tea</h4>
             </div>
         </div>
-
+    </div>
         <div id="highlights">
             <div>
                 <h2>Tea of the Month</h2>
@@ -68,8 +68,35 @@
                         </div>
                         <p>Bedford Bizarre Tea</p>
                     </div>
-                </div>
+                </div> <!-- rows -->
             </div>            
+        </div>
+
+    <div id="locations">
+        <div class="spacing">
+            <div>
+                <h2>Locations</h2>
+            </div>
+            <div class="rows">
+                <div class="locations_square">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="locations_square">
+                    <h3>East Bayside</h3>
+                    <p>3433 Phisherman's Avenue</p>
+                    <p>(Northwest Corner)</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="locations_square">
+                    <h3>Oakdale</h3>
+                    <p>515 Crescent Avenue</p>
+                    <p>Second Floor</p>
+                    <p>Portland, Maine</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
