--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Oganic Tea</h4>
             </div>
-        </div>
+        </div> <!-- about -->
     </div>
         <div id="highlights">
             <div>
@@ -70,7 +70,7 @@
                     </div>
                 </div> <!-- rows -->
             </div>            
-        </div>
+        </div> <!-- highlights-->
 
     <div id="locations">
         <div class="spacing">
@@ -98,6 +98,16 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> <!-- locations -->
+
+    <div id="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+    </div> <!-- contact -->
+
+    <footer>
+        <p>copyright The Tea Cozy 2017</p>
+    </footer>
 </body>
 </html>
